# imputation-powered-inference

./: .gitignore  README.md  pyproject.toml
data/census_survey/: acs_2019_CA_filtered.parquet
data/factor_model/: covq2d20.safetensors
experiment_scripts/: allergen_data_expt.py  allergen_data_plotting.py  census_data_expt.py  census_data_plotting.py  diagnostics_expt.py  diagnostics_plotting.py  factor_model_expt.py  factor_model_plotting.py
ipi/: aipw_baselines.py  baselines.py  config.py  cross_ipi_methods.py  ipi_methods.py
ipi/missforest/: .gitignore  requirements.txt
ipi/missforest/src/missforest/: _array.py  _validate.py  errors.py  metrics.py  missforest.py
ipi/missforest/tests/: integration_tests.py
ipi/missforest/tests/unit_tests/: has_method.py  is_numerical_matrix.py  missforest_class_methods.py  validate_2d.py  validate_cat_var_consistency.py  validate_categorical.py  validate_clf.py  validate_column_consistency.py  validate_consistent_dimensions.py  validate_early_stopping.py  validate_empty_feature.py  validate_feature_dtype_consistency.py  validate_imputable.py  validate_infinite.py  validate_initial_guess.py  validate_max_iter.py  validate_rgr.py  validate_verbose.py
ipi/utils/: allergen_data_utils.py  census_survey_utils.py  diagnostic_expt_utils.py  factor_model_em_utils.py  factor_model_utils.py  general_utils.py  missing_data_utils.py  plotting_utils.py  stats_utils.py
