[project]
name = "ipi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvxpy>=1.7.2",
    "click>=8.1.7",
    "folktables>=0.0.12",
    "lightgbm>=4.6.0",
    "lleaves>=1.3.0",
    "msgspec>=0.19.0",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pandas>=2.2.2",
    "plotnine>=0.14.5",
    "matplotlib>=3.9.0",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "rich>=14.0.0",
    "safetensors>=0.5.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
    "wandb>=0.19.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
missforest = { path = "ipi/missforest" }

[tool.ruff.lint]
extend-select = [
    'A',
    'ANN001',
    'ANN201',
    'ASYNC',
    'B',
    'C4',
    'FAST',
    'I001',
    'PIE',
    'PYI',
    'RET',
    'RUF',
    'SIM',
    'UP', 
    'PT', 
    'ARG',
]
ignore = ["E501"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[dependency-groups]
dev = [
    "missforest",
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "pyinstrument>=5.1.1",
    "pyright>=1.1.405",
]
